[gd_scene load_steps=19 format=2]

[ext_resource path="res://gameplay/base_crate.tscn" type="PackedScene" id=1]
[ext_resource path="res://textures/crate/common/boxes-tnt-side.png" type="Texture" id=2]
[ext_resource path="res://materials/crates/mat_tnt.tres" type="Material" id=3]
[ext_resource path="res://textures/crate/common/boxes-tnt-2.png" type="Texture" id=4]
[ext_resource path="res://Sounds/crate/explosion.wav" type="AudioStream" id=5]
[ext_resource path="res://Sounds/crate/tnt_active.wav" type="AudioStream" id=6]
[ext_resource path="res://textures/crate/common/boxes-tnt-3.png" type="Texture" id=7]
[ext_resource path="res://textures/crate/common/boxes-tnt-1.png" type="Texture" id=8]
[ext_resource path="res://textures/crate/rare/boxes-particles.png" type="Texture" id=9]
[ext_resource path="res://scripts/crates/CrateTNT.gd" type="Script" id=10]
[ext_resource path="res://materials/crates/mat_tnt_top.tres" type="Material" id=11]
[ext_resource path="res://particles/P_Explosion.tscn" type="PackedScene" id=12]
[ext_resource path="res://particles/sparkle.png" type="Texture" id=13]

[sub_resource type="SpatialMaterial" id=1]
flags_transparent = true
vertex_color_use_as_albedo = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 0.988235, 0.0196078, 0.0196078, 0.807843 )
albedo_texture = ExtResource( 9 )
metallic_specular = 0.0
emission_enabled = true
emission = Color( 0.917969, 0.723909, 0.54863, 1 )
emission_energy = 0.06
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="QuadMesh" id=2]
material = SubResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "activate"
length = 4.0
step = 0.01
tracks/0/type = "audio"
tracks/0/path = NodePath("sfx")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 6 )
} ],
"times": PoolRealArray( 0 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("Model/MeshInstance:material/0:albedo_texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.07, 1.43, 2.84 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 8 ) ]
}

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.983864, 0.977201, 1.05861 )

[sub_resource type="SpatialMaterial" id=5]
params_blend_mode = 1
albedo_color = Color( 0.890196, 0.427451, 0.0156863, 1 )
albedo_texture = ExtResource( 13 )
metallic_specular = 0.0

[node name="obj_crate_tnt" instance=ExtResource( 1 )]
collision_layer = 9
script = ExtResource( 10 )
destroyable = true
is_animated = false

[node name="Particles" parent="." index="1"]
draw_pass_1 = SubResource( 2 )

[node name="MeshInstance" parent="Model" index="0"]
material/0 = ExtResource( 3 )
material/1 = ExtResource( 11 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]
anims/activate = SubResource( 3 )

[node name="sfx" type="AudioStreamPlayer3D" parent="." index="4"]
stream = ExtResource( 5 )
unit_db = 80.0

[node name="P_Explosion" parent="." index="5" instance=ExtResource( 12 )]
emitting = false
one_shot = true

[node name="ExplosionArea" type="Area" parent="." index="6"]
collision_layer = 512
collision_mask = 31

[node name="CollisionShape" type="CollisionShape" parent="ExplosionArea" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.326782, 0 )
shape = SubResource( 4 )
disabled = true

[node name="Sprite3D" type="Sprite3D" parent="." index="7"]
transform = Transform( 1.4727, 0, 0, 0, -0.0523709, 1.47176, 0, -1.47176, -0.0523709, 0, -0.0102988, 0 )
visible = false
material_override = SubResource( 5 )
double_sided = false
texture = ExtResource( 13 )
hframes = 6
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
[connection signal="body_entered" from="ExplosionArea" to="." method="_on_ExplosionArea_body_entered"]
